Fix layout issues from code review

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,8 +1,9 @@
 #app {
-    margin: auto;
-    padding: 0px;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
