--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
@@ -18,23 +22,6 @@
         color: #213547;
         background-color: #ffffff;
     }
-}
-
-.inputcontainer {
-    width: 100%; /* Full-width */
-    margin: 1em 0;
-    display: flex;
-    gap: 1em;
-    flex-direction: column;
-}
-
-.buttoncontainer {
-    width: 100%; /* Full-width */
-    margin: 1em 0;
-    display: flex;
-    flex-direction: row;
-    gap: 1em;
-    justify-content: flex-start;
 }
 
 /* From https://github.com/mrdoob/three.js/blob/master/examples/misc_boxselection.html */
